external-crates/move/crates/move-compiler/tests/move_2024/matching/duplicate_defns.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/matching/duplicate_defns.move:9:17
  │
2 │     public enum X {
  │                 - Alias previously defined here
  ·
9 │     public enum X {
  │                 ^ Duplicate module member or alias 'X'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_2024/matching/duplicate_defns.move:14:19
   │
 9 │     public enum X {
   │                 - Alias previously defined here
   ·
14 │     public struct X(u64, u64, u64)
   │                   ^ Duplicate module member or alias 'X'. Top level names in a namespace must be unique
